# dig-deep

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/claude-code/: README.md
adapters/claude-code/agents/: dig-deep.md  dig-meta.md  dig-papers.md  dig-reddit.md  dig-wiki.md  dig-yt.md
docs/: PORTABILITY.md  wiki-SCHEMA.md
scripts/digdeep/: __init__.py  browser.py  budgets.py  cli.py  config.py  doctor.py  errors.py  http.py  merge.py  models.py  render.py
scripts/digdeep/lanes/: __init__.py  papers.py  playlist.py  reddit.py  web.py  wiki.py  youtube.py
spec/lanes/: papers.md  playlist.md  reddit.md  web.md  wiki.md  youtube.md
tests/: conftest.py  lint_frontmatter.py  test_core.py  test_lanes.py
tests/fixtures/: sample.json3
