[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "digdeep"
version = "0.1.0"
description = "Framework-agnostic deep-research tools: web, Reddit, YouTube, and academic papers — one portable CLI any agent (or human) can drive."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Max Girkens", email = "maxgirkens@gmail.com" }]
keywords = ["research", "search", "reddit", "youtube", "papers", "ddgs", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
# The core deliberately has ZERO required Python dependencies — it runs on the
# stdlib plus two external CLIs (`ddgs`, `yt-dlp`) installed separately. This
# keeps "anyone can run it" frictionless. See `digdeep doctor`.
dependencies = []

[project.optional-dependencies]
# Better HTML→text extraction than the built-in stdlib stripper.
extract = ["trafilatura>=1.6"]
# Headless-browser fallback for JS-heavy / bot-blocked pages.
browser = ["playwright>=1.40"]
# Structured glossary-subgraph traversal in the wiki lane (else substring fallback).
wiki = ["PyYAML>=5.1"]
# Everything optional, for the full experience.
all = ["trafilatura>=1.6", "playwright>=1.40", "PyYAML>=5.1"]

[project.urls]
Homepage = "https://github.com/gherkins/dig-deep"
Repository = "https://github.com/gherkins/dig-deep"

[project.scripts]
digdeep = "digdeep.cli:main"

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.setuptools.packages.find]
where = ["scripts"]
